[package]
name = "reddsa"
edition = "2021"
# When releasing to crates.io:
# - Update CHANGELOG.md
# - Create git tag.
version = "0.3.0"
authors = [
    "Henry de Valence <hdevalence@hdevalence.ca>",
    "Deirdre Connolly <durumcrustulum@gmail.com>",
    "Chelsea Komlo <me@chelseakomlo.com>",
    "Jack Grigg <jack@electriccoin.co>",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/reddsa"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "zcash"]
description = "A standalone implementation of the RedDSA signature scheme."

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
blake2b_simd = { version = "1", default-features = false }
byteorder = { version = "1.4", default-features = false }
group = { version = "0.12", default-features = false }
jubjub = { version = "0.9", default-features = false }
pasta_curves = { version = "0.4", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = { version = "1.0", optional = true }
frost-rerandomized = { git = "https://github.com/ZcashFoundation/frost.git", rev = "4e20d20135ae1b149a64678eff3651b9cc8bb574", optional = true }

[dependencies.zeroize]
version = "1"
features = ["zeroize_derive"]
optional = true

[dev-dependencies]
bincode = "1"
criterion = "0.3"
proptest-derive = "0.3"
lazy_static = "1.4"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"
frost-rerandomized = { git = "https://github.com/ZcashFoundation/frost.git", rev = "4e20d20135ae1b149a64678eff3651b9cc8bb574" }
frost-core = { git = "https://github.com/ZcashFoundation/frost.git", rev = "4e20d20135ae1b149a64678eff3651b9cc8bb574", features=["test-impl"]  }


# `alloc` is only used in test code
[dev-dependencies.pasta_curves]
features = ["alloc"]

[features]
std = ["blake2b_simd/std", "thiserror", "zeroize", "alloc",
       "serde", "frost-rerandomized"] # conditional compilation for serde not complete (issue #9)
alloc = []
nightly = []
default = ["std"]

[[bench]]
name = "bench"
harness = false
